--- a/task_10/css/style.css
+++ b/task_10/css/style.css
@@ -1,3 +1,39 @@
+@keyframes showingUp {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px); }
+  80% {
+    transform: translateY(20px); }
+  100% {
+    opacity: 1;
+    transform: translate(0px); } }
+.showing-up {
+  animation: showingUp 1.5s ease-out; }
+
+@keyframes movingToRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-20px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    opacity: 1;
+    transform: translate(0px); } }
+.moving-to-right {
+  animation: movingToRight 1.5s ease-out; }
+
+@keyframes movingToLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(20px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    opacity: 1;
+    transform: translate(0px); } }
+.moving-to-left {
+  animation: movingToLeft 1.5s ease-out; }
+
 * {
   font-family: "Roboto", sans-serif;
   font-stretch: ultra-condensed;
@@ -142,6 +178,15 @@ body {
   background: lightblue;
   padding: 5px 8px 5px 8px; }
   .btn:hover {
-    opacity: 0.5; }
+    opacity: 0.7; }
+  .btn.btn-active {
+    opacity: 1;
+    transition: all .2s; }
+    .btn.btn-active:hover {
+      transform: translate(-3px, -3px);
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5); }
+    .btn.btn-active:active {
+      transform: translate(-1px, -1px);
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); }
 
 /*# sourceMappingURL=style.css.map */
