--- a/task_10/css/style.css
+++ b/task_10/css/style.css
@@ -60,20 +60,21 @@ body {
     width: 320px;
     margin-left: auto;
     margin-right: auto; } }
+.main-panel,
+.day-panel {
+  background: skyblue;
+  border: 1px solid gray;
+  line-height: 1.5;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); }
+
 .main-panel {
   padding: 20px;
-  background: skyblue;
-  border-radius: 10px;
-  border: 1px solid gray;
-  line-height: 1.5; }
+  border-radius: 10px; }
 
 .day-panel {
   width: 30%;
   padding: 5px;
-  background: skyblue;
   border-radius: 5px;
-  border: 1px solid gray;
-  line-height: 1.5;
   font-weight: bold;
   margin: 7px 0 7px 0; }
 
@@ -182,7 +183,7 @@ body {
   .btn.btn-active {
     opacity: 1;
     transition: all .2s; }
-    .btn.btn-active:hover {
+    .btn.btn-active:hover, .btn.btn-active:focus {
       transform: translate(-3px, -3px);
       box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5); }
     .btn.btn-active:active {
