--- a/task_10/css/style.css
+++ b/task_10/css/style.css
@@ -1,15 +1,3 @@
-@keyframes showingUp {
-  0% {
-    opacity: 0;
-    transform: translateY(-20px); }
-  80% {
-    transform: translateY(20px); }
-  100% {
-    opacity: 1;
-    transform: translate(0px); } }
-.showing-up {
-  animation: showingUp 1.5s ease-out; }
-
 @keyframes movingToRight {
   0% {
     opacity: 0;
@@ -33,6 +21,17 @@
     transform: translate(0px); } }
 .moving-to-left {
   animation: movingToLeft 1.5s ease-out; }
+
+@keyframes showingUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px); }
+  100% {
+    opacity: 1;
+    transform: translate(0px); } }
+.showing-up {
+  animation: showingUp 1s ease-out 1.5s;
+  animation-fill-mode: backwards; }
 
 * {
   font-family: "Roboto", sans-serif;
